--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
         </div> -->
 <div class ="slideContainer alignCenter">
         <div class="mySlides fade">
-        <img src="assets/img/1.jpg" style="width:100%">
+        <img src="assets/img/1.jpg" style="width:100% ; height: 300px;">
         </div>
         <div class="mySlides fade">
-        <img src="assets/img/2.jpg" style="width:100%">
+        <img src="assets/img/2.jpg" style="width:100% ; height: 300px;">
         </div>
         <div class="mySlides fade">
-        <img src="assets/img/3.jpg" style="width:100%">
+        <img src="assets/img/3.jpg" style="width:100% ; height: 300px;">
         </div>
         <!-- <div class="mySlides fade">
         <img src="assets/img/4.JPG" style="width:100%">
