adjusted image size i idec.html

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h1>Liya</h1>
             <h3>Are getting married</h3>
             <p>
-               on <span class="date">28 August 2022</span>
+               on <span class="date">23rd October 2022</span>
                 <!-- <br><br/> Muhoortham between <span class="date"> 11.30 a.m and 12.00 p.m </span> <br/><br/> At <span class="place"> Nanma Auditorium,Andikkalam </span>
                <span class="time"></span> -->
             </p>
@@ -70,13 +70,13 @@
       <p class="place1">
             <span class="place1">Nanma Auditorium,Andikkalam</span>
        <br><br/>
-        On <span class="date1">23 2022, from 3.00 pm - 8.30 pm
+        On <span class="date1">23rd October 2022
       <div class="receptionParent">
 	  <div class="actions">
-        <a href="https://g.co/kgs/KKQHhZ" target="_blank">
+        <a href="https://goo.gl/maps/2jZ1Zfcj1ZCgeYVFA" target="_blank">
           <div class="venue">RECEPTION VENUE</div>
         </a>
-        <a href="/invitation/invitation.jpeg" download="Invitation | 23 October | Hope to see you there!">
+        <a href="invitation/invitation.jpeg" download="Invitation | 23rd October | Hope to see you there!">
           <div class="venue">DOWNLOAD INVITATION CARD</div>
         </a>
       </div>
@@ -205,7 +205,7 @@
 <div class="openOverlay" id="opovrlay" onclick="animateOpen();" >
 <img src = "assets/img/openimgg.png" width="100px" height="100x"><span class="open">Open</span>
 </div>
-<p class="footer1"> Modified by &ensp;<i class="fa fa-github"></i>&nbsp;<a href="https://github.com/athulvis" target="_blank" class="twitter"> athulvis</a>  &ensp; <b>•</b>  &ensp;<a href="https://github.com/athulvis/aswathy-sumith">Source Code</a> &ensp; <b>•</b> &ensp; <a href="https://github.com/vinitshahdeo/Wedding-Invitation"> Original repo </a>
+<p class="footer1"> Modified by &ensp;<i class="fa fa-github"></i>&nbsp;<a href="https://github.com/rby756" target="_blank" class="twitter"> athulvis & rby756</a>  &ensp; <b>•</b>  &ensp;<a href="https://github.com/athulvis/aswathy-sumith">Source Code</a> &ensp; <b>•</b> &ensp; <a href="https://github.com/vinitshahdeo/Wedding-Invitation"> Original repo </a>
       </p>
 </div>
       <!-- partial -->
